--- a/index.html
+++ b/index.html
@@ -765,5 +765,120 @@
       </div>
 
     </div>
+
+    <div class="pricing-plans" id="pricing-plans">
+      <div class="main-title">
+        <h2>PRICING PLANS</h2>
+      </div>
+
+      <div class="container">
+
+        <div class="card">
+          <h3>Basic</h3>
+          <i class="fa-solid fa-server"></i>
+          <h1>$15</h1>
+          <div>
+            <i class="fa-solid fa-check"></i>
+            10GB HDD Space
+          </div>
+
+          <div>
+            <i class="fa-solid fa-check"></i>
+            5 Email Addresses
+          </div>
+
+          <div>
+            <i class="fa-solid fa-check"></i>
+            2 Subdomains
+          </div>
+
+          <div>
+            <i class="fa-solid fa-check"></i>
+            4 Databases
+          </div>
+
+          <div>
+            <i class="fa-solid fa-check"></i>
+            Basic Support
+          </div>
+
+          <div class="button">
+            <a href="#">Choose Plan</a>
+          </div>
+
+        </div>
+
+        <div class="card">
+          <h3>Advanced</h3>
+          <i class="fa-solid fa-database"></i>
+          <h1>$25</h1>
+          <div>
+            <i class="fa-solid fa-check"></i>
+            20GB HDD Space
+          </div>
+
+          <div>
+            <i class="fa-solid fa-check"></i>
+            10 Email Addresses
+          </div>
+
+          <div>
+            <i class="fa-solid fa-check"></i>
+            5 Subdomains
+          </div>
+
+          <div>
+            <i class="fa-solid fa-check"></i>
+            8 Databases
+          </div>
+
+          <div>
+            <i class="fa-solid fa-check"></i>
+            Advanced Support
+          </div>
+
+          <div class="button">
+            <a href="#">Choose Plan</a>
+          </div>
+
+        </div>
+
+        <div class="card">
+          <h3>Professional</h3>
+          <i class="fa-solid fa-cloud-arrow-up"></i>
+          <h1>$45</h1>
+          <div>
+            <i class="fa-solid fa-check"></i>
+            50GB HDD Space
+          </div>
+
+          <div>
+            <i class="fa-solid fa-check"></i>
+            20 Email Addresses
+          </div>
+
+          <div>
+            <i class="fa-solid fa-check"></i>
+            10 Subdomains
+          </div>
+
+          <div>
+            <i class="fa-solid fa-check"></i>
+            20 Databases
+          </div>
+
+          <div>
+            <i class="fa-solid fa-check"></i>
+            Professional Support
+          </div>
+
+          <div class="button">
+            <a href="#">Choose Plan</a>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
 </body>
 </html>
