--- a/index.html
+++ b/index.html
@@ -880,5 +880,65 @@
 
       </div>
     </div>
+
+    <div class="top-videos" id="top-videos">
+      <div class="main-title">
+        <h2>TOP VIDEOS</h2>
+      </div>
+
+      <div class="container">
+        <div class="info">
+
+          <div class="title">
+            Top Videos
+            <i class="fa-solid fa-shuffle"></i>
+          </div>
+
+          <div class="card">
+            <h4>How To Create Sub Domain</h4>
+            <h4>05:18</h4>
+          </div>
+
+          <div class="card">
+            <h4>Playing With The DNS</h4>
+            <h4>03:18</h4>
+          </div>
+
+          <div class="card">
+            <h4>Everything About The Virtual Hosts</h4>
+            <h4>05:25</h4>
+          </div>
+
+          <div class="card">
+            <h4>How To Monitor Your Website</h4>
+            <h4>04:16</h4>
+          </div>
+
+          <div class="card">
+            <h4>Uncharted Beating The Last Boss</h4>
+            <h4>07:48</h4>
+          </div>
+
+          <div class="card">
+            <h4>Ys Oath In Felghana Overview</h4>
+            <h4>03:12</h4>
+          </div>
+
+          <div class="card">
+            <h4>Ys Series All Games Ending</h4>
+            <h4>08:10</h4>
+          </div>
+
+        </div>
+
+        <div class="preview">
+          <div class="image">
+            <img src="images/video-preview.jpg" alt="video-preview">
+          </div>
+          
+          <div>Everything About The Virtual Hosts</div>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
