Added Stats Section

--- a/index.html
+++ b/index.html
@@ -940,5 +940,38 @@
         </div>
       </div>
     </div>
+
+    <div class="stats" id="stats">
+      <div class="title">
+        <h1>Our Awesome Stats</h1>
+      </div>
+
+      <div class="container">
+        <div class="stat">
+          <i class="fa-regular fa-user"></i>
+          <h1>150</h1>
+          <h4>Clients</h4>
+        </div>
+
+        <div class="stat">
+          <i class="fa-solid fa-code"></i>
+          <h1>135</h1>
+          <h4>Projects</h4>
+        </div>
+
+        <div class="stat">
+          <i class="fa-solid fa-earth-asia"></i>
+          <h1>50</h1>
+          <h4>Countries</h4>
+        </div>
+
+        <div class="stat">
+          <i class="fa-regular fa-money-bill-1"></i>
+          <h1>500</h1>
+          <h4>Money</h4>
+        </div>
+
+      </div>
+    </div>
 </body>
 </html>
