Added Discount Section

--- a/index.html
+++ b/index.html
@@ -973,5 +973,42 @@
 
       </div>
     </div>
+
+    <div class="discount" id="request">
+      <div class="flex">
+
+        <div class="page">
+          
+          <div class="info">
+            <h1>We Have A Discount</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Excepturi asperiores consectetur, recusandae ratione provident
+               necessitatibus, cumque delectus commodi fuga praesentium beatae.
+                Totam vel similique laborum dicta aperiam odit doloribus corporis.
+            </p>
+            <div class="image">
+              <img src="images/discount.png" alt="discount">
+            </div>
+          </div>
+
+        </div>
+
+        <div class="page">
+
+          <h1>Request A Discount</h1>
+
+          <form action="">
+            <input type="text" name="name" id="name" placeholder="Your Name">
+            <input type="email" name="email" id="email" placeholder="Your Email">
+            <input type="tel" name="phone" id="phone" placeholder="Your Phone">
+            <textarea name="needs" id="needs" placeholder="Tell Us About Your Needs"></textarea>
+            <input type="submit" value="Send">
+          </form>
+        </div>
+
+      </div>
+    </div>
+
+    
 </body>
 </html>
