Added Footer and fixed the background in skills section

--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
         <div class="container">
             <img src="images/skills.png" alt="skills">
             
-            <div class="stats">
+            <div class="statistic">
                 <h4>HTML</h4>
                 <div class="bar" data-prog="80%">
                     <span></span>
@@ -1009,6 +1009,106 @@
       </div>
     </div>
 
-    
+    <footer>
+      <div class="container">
+        <div class="col">
+          <h1>Ultimate</h1>
+          <div class="link">
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+          </div>
+
+          <div class="link">
+            <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+          </div>
+
+          <div class="link">
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          </div>
+
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus nulla rem, dignissimos iste aspernatur</p>
+        </div>
+
+        <div class="col">
+          <ul>
+            <li>
+              <i class="fa-solid fa-angles-right"></i>
+              <a href="#">Important Link 1</a>
+            </li>
+
+            <li>
+              <i class="fa-solid fa-angles-right"></i>
+              <a href="#">Important Link 2</a>
+            </li>
+
+            <li>
+              <i class="fa-solid fa-angles-right"></i>
+              <a href="#">Important Link 3</a>
+            </li>
+
+            <li>
+              <i class="fa-solid fa-angles-right"></i>
+              <a href="#">Important Link 4</a>
+            </li>
+
+            <li>
+              <i class="fa-solid fa-angles-right"></i>
+              <a href="#">Important Link 5</a>
+            </li>
+
+          </ul>
+        </div>
+
+        <div class="col">
+          <div class="info">
+            <i class="fa-solid fa-location-dot"></i>
+            <p>Egypt, Cairo, Mokattam, Alhadaba Alwosta</p>
+          </div>
+
+          <div class="info">
+            <i class="fa-regular fa-clock"></i>
+            <p>Business Hours: From 10:00 To 18:00</p>
+          </div>
+
+          <div class="info">
+            <i class="fa-solid fa-phone-volume"></i>
+            <p>+201126292797</p>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="grid">
+
+            <div class="box">
+              <img src="images/gallery-01.png" alt="gallery-01">
+            </div>
+
+            <div class="box">
+              <img src="images/gallery-02.png" alt="gallery-02">
+            </div>
+
+            <div class="box">
+              <img src="images/gallery-03.jpg" alt="gallery-03">
+            </div>
+
+            <div class="box">
+              <img src="images/gallery-04.png" alt="gallery-04">
+            </div>
+
+            <div class="box">
+              <img src="images/gallery-05.jpg" alt="gallery-05">
+            </div>
+
+            <div class="box">
+              <img src="images/gallery-06.png" alt="gallery-06">
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <hr>
+      <h3>Made By Kareem Ayman, Designed By Elzero</h3>
+
+    </footer>
 </body>
 </html>
