Added Scroll-to-top button style & changed scrollbar

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 
 </head>
 <body>
+
+    <div class="scroll-to-top invisible">
+      <i class="fa-solid fa-arrow-up"></i>
+    </div>
+
     <header>
         <div class="container">
             <h3><a href="#">Ultimate</a></h3>
